<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cameo</string>
    <string name="logo">logo</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="sign_in">Sign In</string>
    <string name="error">Error</string>
    <string name="loading">Loading</string>
    <string name="forgot_password">Forgot you password?</string>
    <string name="retry_notice">There was an error performing the request. Do you want to retry?</string>
    <string name="copyright">Copyright Hive Solutions 2008&#8211;2017</string>
    <color name="black">#000000</color>
    <color name="white">#ffffff</color>
    <color name="grey">#6d6d6d</color>
    <color name="dark_grey">#4d4d4d</color>
    <color name="light_grey">#aaaaaa</color>
    <color name="light_light_grey">#bbbbbb</color>
    <color name="light_blue">#31abd4</color>
    <color name="navy_blue">#54759e</color>
    <color name="light_navy_blue">#6c97cc</color>
    <color name="transparent">#00000000</color>
    <color name="black_transparent">#99000000</color>
</resources>
