<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@xml/backgrund_dark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo" />

    <ImageView
        android:id="@+id/text_fields"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/logo"
        android:background="@drawable/text_fields"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/logo"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/transparent"
        android:singleLine="true"
        android:textCursorDrawable="@null"
        android:typeface="sans"
        android:textColor="#ffffff"
        android:textColorHint="#888888"
        android:textSize="16sp"
        android:hint="@string/username" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/username"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/transparent"
        android:singleLine="true"
        android:textCursorDrawable="@null"
        android:typeface="sans"
        android:textColor="#ffffff"
        android:textColorHint="#888888"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/password"
        android:layout_alignLeft="@+id/text_fields"
        android:layout_centerVertical="true"
        android:background="@xml/button"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/sign_in" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_alignBaseline="@+id/sign_in"
        android:layout_toRightOf="@+id/sign_in"
        android:textColor="#ffffff"
        android:text="@string/forgot_password" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:text="@string/copyright" />

</RelativeLayout>
